<resources>
    <string name="app_name">ITUNG-IN</string>
    <string name="haveaccount">Do you have already account?Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="judul">LOGIN</string>
    <string name="login">Login</string>
    <string name="createaccount">Create an account? Register?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="itungin">ITUNG-IN</string>
    <string name="totaltxt">Total</string>
    <string name="coba">Rp 100.000.000</string>
    <string name="tampil_pemasukkan">Tampil Pemasukkan</string>
    <string name="tambah_pemasukkan">Tambah Pemasukkan</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="todo">TODO</string>
</resources>
