<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".login.Login">

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/judul"
        android:textColor="@color/fcwhite"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/roundedcard"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.200">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edt_username"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="#6B6B6B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="@color/fontcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:text="@string/login"
                android:textColor="#646262"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                app:layout_constraintVertical_bias="0.879" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pndhregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/createaccount"
        android:textColor="@color/fcwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintHorizontal_bias="0.500" />
</androidx.constraintlayout.widget.ConstraintLayout>